# ZipJeweler

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  testing
.streamlit/: config.toml
api/: main.py
config/: brand_guidelines.yaml  platform_config.yaml  target_audience.yaml
dashboard/: next.config.js  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: ActivityFeed.tsx  CrewGrid.tsx  LeadFunnel.tsx  MetricsBar.tsx  PlatformConnections.tsx  Sidebar.tsx
data/knowledge/: features.md  pain_points.md  testimonials.md
data/prompts/: creator_prompts.md  listener_prompts.md  qualifier_prompts.md
scripts/: seed_demo_data.py  setup_db.py
src/zipjeweler/: main.py
src/zipjeweler/agents/config/: intelligence_agents.yaml  listener_agents.yaml
src/zipjeweler/config/: settings.py
src/zipjeweler/crews/: intelligence_crew.py  listening_crew.py
src/zipjeweler/crews/config/: intelligence_tasks.yaml  listening_tasks.yaml
src/zipjeweler/dashboard/: __init__.py  app.py  db.py
src/zipjeweler/dashboard/api/: __init__.py  crew_controller.py
src/zipjeweler/dashboard/components/: agent_status.py  approval_widget.py  charts.py  data_tables.py  metric_cards.py
src/zipjeweler/dashboard/pages/: analytics.py  content.py  engagement.py  evolution.py  home.py  intelligence.py  listening.py  publishing.py  settings.py
src/zipjeweler/models/: content.py  database.py  engagement.py  lead.py  learning.py
src/zipjeweler/sheets/: __init__.py  client.py  creation_sheet.py  direction_reader.py  intelligence_sheet.py  learning_sheet.py  listening_sheet.py  publishing_sheet.py
src/zipjeweler/tools/: lead_scoring_tools.py  reddit_tools.py
src/zipjeweler/utils/: logger.py  rate_limiter.py  retry.py
tests/: conftest.py
tests/test_agents/: test_models.py
zipjeweler/: __init__.py  cli.py  config.py  pipeline.py
zipjeweler/agents/analytics/: agents.py
zipjeweler/agents/content/: agents.py
zipjeweler/agents/engagement/: agents.py
zipjeweler/agents/evolution/: agents.py
zipjeweler/agents/intelligence/: __init__.py  agents.py
zipjeweler/agents/listening/: agents.py
zipjeweler/agents/posting/: agents.py
zipjeweler/crews/: __init__.py  analytics_crew.py  content_crew.py  engagement_crew.py  evolution_crew.py  intelligence_crew.py  listening_crew.py  posting_crew.py
zipjeweler/dashboard/: app.py
