[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zipjeweler-agents"
version = "0.1.0"
description = "AI-powered social media marketing agents for ZipJeweler — a jewelry business management tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Michael Ray Jewelry" },
]

dependencies = [
    # Agent Framework
    "crewai[tools]>=0.80.0",

    # LLM Providers
    "litellm>=1.50.0",
    "anthropic>=0.39.0",

    # Social Media Platforms
    "praw>=7.7.0",
    "tweepy>=4.14.0",
    "facebook-sdk>=3.1.0",

    # Data & Storage
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.5.0",

    # Google Sheets
    "gspread>=6.0.0",
    "google-auth>=2.28.0",

    # Scheduling & Orchestration
    "apscheduler>=3.10.0",

    # Image Generation
    "pillow>=10.0.0",

    # Web & HTTP
    "requests>=2.31.0",
    "httpx>=0.27.0",

    # Config & Logging
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",

    # Dashboard
    "streamlit>=1.40.0",
    "plotly>=5.22.0",

    # CLI
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
zipjeweler = "zipjeweler.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/zipjeweler"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
